[package]
name = "tokio-proq"
version = "0.1.0"
authors = [
    "Mahmut Bulut <vertexclique@gmail.com>",
    "Patrice Billaut <pbillaut@pm.me>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
]
keywords = ["prometheus", "metrics-gathering", "metrics", "aggregation", "async"]
categories = ["asynchronous", "api-bindings", "web-programming"]
homepage = "https://github.com/vorot93/tokio-proq"
repository = "https://github.com/vorot93/tokio-proq"
description = "Idiomatic Async Prometheus Query (PromQL) Client for Rust."
documentation = "https://docs.rs/tokio-proq"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"
exclude = [
	".github/*",
	"examples/*",
	"graphstore/*",
	"tests/*",
	"img/*",
	"ci/*",
	"benches/*",
	"doc/*",
	"*.png",
	"*.dot",
	"*.yml",
	"*.toml",
	"*.md"
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4.10"
failure = "0.1.6"
http = "0.2"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
serde_urlencoded = "0.6.1"
url = "1.7"
url_serde = "0.2.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
once_cell = "1.2.0"
